# docs/swagger.yaml
@@ -151,6 +151,29 @@ definitions:
       updated_at:
         type: string
     type: object
+  handlers.SearchTaskResponse:
+    properties:
+      board_id:
+        type: string
+      column_id:
+        type: string
+      id:
+        type: string
+      number:
+        type: integer
+      title:
+        type: string
+    type: object
+  handlers.SearchTasksRequest:
+    properties:
+      filters:
+        properties:
+          tags:
+            items:
+              type: string
+            type: array
+        type: object
+    type: object
 externalDocs:
   description: OpenAPI
 host: localhost:8080
@@ -405,6 +428,57 @@ paths:
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Получение задачи по ID
+      tags:
+      - Tasks
+  /v1/tasks/search:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request для поиска тасок
+        in: body
+        name: searchTasksRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.SearchTasksRequest'
+      - description: название задачи
+        in: query
+        name: q
+        type: string
+      - description: лимит
+        in: query
+        name: limit
+        type: string
+      - description: отступ
+        in: query
+        name: offset
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.SearchTaskResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Поиск задач по тегам и названию
       tags:
       - Tasks
 securityDefinitions:
